--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -44,8 +44,8 @@ form {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 1%;
-  margin-top: 1px;
-  background-color: rgba(0, 0, 00, 0.70);
+  margin-top: 5%;
+ 
   border: 1px solid rgba(0, 0, 00, 0.70);
   color: white;
   overflow:auto;
@@ -55,19 +55,28 @@ form {
 }
 .question_div{
 	display: inline-block;
-	width: 90%;
+    width: 90%;
     float: left;
-    background-color: whitesmoke;
+    background-color: rgba(255, 255, 255, 0.1); 
     border-radius: 10px;
     word-wrap: break-word;
     height: fit-content;
-    color: black;
+    color: white;
+    padding: 10px;
 }
 .marks_div{
 	display: inline-block;
+    float: right;
+    background: brown;
+    padding: inherit;
 }
 .question_inner_div{
 	display: inline-block;
+    /* background-color: whitesmoke; */
+    width: 95%;
+    /* border-radius: 2%; */
+/*    background-color: rgba(0, 0, 00, 0.70);*/
+    padding: 2px;
 }
 
 #textbox1 {
