--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -114,7 +114,7 @@ form {
 }
 
 
-.button {
+.button,#button {
     height: 3em;
     width: 23em	;
     font-family: 'Roboto Condensed', sans-serif;
@@ -129,7 +129,7 @@ form {
     
 }
 
-.button:hover {
+.button:hover,#button:hover {
     background-color: rgba(255, 255, 255, 0.5);
     color:black;
 }
