--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -49,7 +49,7 @@ form {
   border: 1px solid rgba(0, 0, 00, 0.70);
   color: white;
   overflow:auto;
-  height:webkit-fill-available;
+  height:-webkit-fill-available;
   width:80%;
 
 }
